--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 isNaN(currentSkill) || isNaN(percentToNext) || isNaN(targetSkill) ||
                 currentSkill < 10 || percentToNext < 0 || percentToNext > 100 || targetSkill <= currentSkill
             ) {
-                alert("Wprowadź poprawne wartości (aktualny poziom skilla nie może być mniejszy niż 10).");
+                alert("Wprowadź poprawne wartości.");
                 return;
             }
 
