--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
         <div id="staminaTab" class="tab-content active">
             <h1>Kalkulator odnawiania staminy</h1>
 
+            <p class="info"><strong>Uwaga:</strong> od edycji 2025 – Xenoria bonus stamina to <strong>2 godziny</strong>, a nie 3 jak poprzednio.</p>
+            
             <label for="staminaHours">Aktualny poziom staminy (godziny):</label>
             <input type="number" id="staminaHours" placeholder="Wpisz ilość godzin" min="0">
 
