--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
 
         <div id="trainingMagicTab" class="tab-content">
-            <h1>Kalkulator treningu melee</h1>
+            <h1>Kalkulator treningu magic</h1>
 
             <label for="currentSkillMagic">Aktualny poziom skilla (min. 10):</label>
             <input type="number" id="currentSkillMagic" placeholder="Wpisz aktualny poziom" min="0" value="0">
