--- a/img-download.html
+++ b/img-download.html
@@ -2,25 +2,32 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>MediaWiki Multi Image Downloader</title>
+  <title>MediaWiki Image Downloader</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; }
     textarea { width: 100%; height: 150px; }
     a { display: block; margin: 5px 0; }
+    button { margin-top: 10px; }
   </style>
 </head>
 <body>
   <h2>MediaWiki Multi Image Downloader</h2>
   <p>Wklej linki do podstron wiki (jeden link na linię):</p>
   <textarea id="urlList"></textarea><br>
-  <button onclick="fetchAllImages()">Pobierz obrazki</button>
+  <button onclick="fetchAllImages()">Szukaj obrazków</button>
+  <button onclick="downloadAll()" id="downloadBtn" disabled>Pobierz wszystko jako ZIP</button>
 
   <div id="results"></div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
   <script>
+    let foundImages = [];
+
     async function fetchAllImages() {
       const resultsDiv = document.getElementById('results');
+      const downloadBtn = document.getElementById('downloadBtn');
       resultsDiv.innerHTML = 'Szukanie obrazków...';
+      foundImages = [];
 
       const rawUrls = document.getElementById('urlList').value.trim().split('\n').map(s => s.trim()).filter(Boolean);
       const allImageUrls = new Set();
@@ -31,7 +38,6 @@
         const pageTitle = decodeURIComponent(inputUrl.split('/index.php/')[1]);
 
         try {
-          // Krok 1: Pobierz tytuły plików z danej podstrony
           const imageResp = await fetch(`${apiUrl}?action=query&titles=${pageTitle}&prop=images&format=json&origin=*`);
           const imageData = await imageResp.json();
           const pages = imageData.query?.pages;
@@ -44,7 +50,6 @@
             }
           }
 
-          // Krok 2: Dla każdego tytułu pliku, pobierz jego URL
           for (const title of imageTitles) {
             const fileResp = await fetch(`${apiUrl}?action=query&titles=${encodeURIComponent(title)}&prop=imageinfo&iiprop=url&format=json&origin=*`);
             const fileData = await fileResp.json();
@@ -62,19 +67,48 @@
         }
       }
 
-      // Wyświetl wszystkie unikalne URL-e
-      if (allImageUrls.size === 0) {
+      // Zapisz unikalne obrazy do listy globalnej
+      foundImages = [...allImageUrls];
+
+      if (foundImages.length === 0) {
         resultsDiv.innerHTML = 'Brak obrazków.';
+        downloadBtn.disabled = true;
       } else {
-        resultsDiv.innerHTML = `<p>Znaleziono ${allImageUrls.size} unikalnych obrazków:</p>`;
-        allImageUrls.forEach(url => {
+        resultsDiv.innerHTML = `<p>Znaleziono ${foundImages.length} unikalnych obrazków:</p>`;
+        foundImages.forEach(url => {
           const link = document.createElement('a');
           link.href = url;
           link.textContent = url.split('/').pop();
           link.target = '_blank';
           resultsDiv.appendChild(link);
         });
+        downloadBtn.disabled = false;
       }
+    }
+
+    async function downloadAll() {
+      if (foundImages.length === 0) return;
+
+      const zip = new JSZip();
+      const folder = zip.folder("mediawiki-images");
+
+      const promises = foundImages.map(async url => {
+        try {
+          const response = await fetch(url);
+          const blob = await response.blob();
+          const filename = url.split('/').pop();
+          folder.file(filename, blob);
+        } catch (e) {
+          console.error('Błąd przy pobieraniu:', url, e);
+        }
+      });
+
+      await Promise.all(promises);
+      const content = await zip.generateAsync({ type: "blob" });
+      const a = document.createElement('a');
+      a.href = URL.createObjectURL(content);
+      a.download = "mediawiki-images.zip";
+      a.click();
     }
   </script>
 </body>
